# lidar_dection

./: .gitignore
scripts/: compare_onnx_trt.py  compare_real_input.py  (+6 more)
src/lidarObstacleDetect/: CMakeLists.txt  package.xml
src/lidarObstacleDetect/config/: dsvt_config_waymo.toml  lidar_detection_track.yaml  tracker_config.toml
src/lidarObstacleDetect/launch/: lidar_detection_track.launch
src/lidarObstacleDetect/lib/bounding_box/: bounding_box.cpp  bounding_box.h
src/lidarObstacleDetect/lib/cluster/euclideanCluster/: euclideanCluster.cpp  euclideanCluster.h
src/lidarObstacleDetect/lib/fusion/: CMakeLists.txt  cuda_transform.cu  cuda_transform.h  multi_lidar_fusion.cpp  multi_lidar_fusion.h
src/lidarObstacleDetect/lib/ground_detector/patchwork/: patchwork.cpp  patchwork.h
src/lidarObstacleDetect/lib/lidarnetsdk/: CMakeLists.txt  README.md  pyprojects.toml
src/lidarObstacleDetect/lib/lidarnetsdk/3rd/: 3rdConfig.cmake  FindCUDNN.cmake  FindTensorRT.cmake  NvidiaConfig.cmake
src/lidarObstacleDetect/lib/lidarnetsdk/3rd/ryml/: ryml_all.hpp
src/lidarObstacleDetect/lib/lidarnetsdk/cmake/: LidarNetSdkConfig.cmake.in  deepways_utils.cmake
src/lidarObstacleDetect/lib/lidarnetsdk/docker/: .condarc  Dockerfile  README.md  docker.sh  sources.list  x86_Dockerfile
src/lidarObstacleDetect/lib/lidarnetsdk/eval/: CMakeLists.txt  dsvt_eval.cpp  json_operate.cpp  json_operate.h  pcd_load.h
src/lidarObstacleDetect/lib/lidarnetsdk/include/lidar_net/: lidar_net_det.h  logging.h  object.h
src/lidarObstacleDetect/lib/lidarnetsdk/python/: CMakeLists.txt  interface.cpp  setup.py
src/lidarObstacleDetect/lib/lidarnetsdk/python/pillarx/: __init__.py  trtexec.py
src/lidarObstacleDetect/lib/lidarnetsdk/src/: CMakeLists.txt  exports.map
src/lidarObstacleDetect/lib/lidarnetsdk/src/base/: eigen_defs.h
src/lidarObstacleDetect/lib/lidarnetsdk/src/blob/: acl_buffer.h  cuda_buffer.h  generic_buffer.h  infer_common.h  synced_buffer.h
src/lidarObstacleDetect/lib/lidarnetsdk/src/common/: Macros.h  deepways_time.h  eigen_utils.h  filesystem.h  json.hpp  json_params_get.hpp  thread_pool.hpp  toml.hpp
src/lidarObstacleDetect/lib/lidarnetsdk/src/inference/trt/: CMakeLists.txt  trt_infer.cpp  trt_infer.h  trt_logger.cpp  trt_logger.h  trt_logging.h  util.cpp  util.h
src/lidarObstacleDetect/lib/lidarnetsdk/src/lidar_net/: CMakeLists.txt  lidar_net_det.cpp  lidar_net_det_impl.h
src/lidarObstacleDetect/lib/lidarnetsdk/src/lidar_net/dsvt/: dsvt_detector_impl.cpp  dsvt_detector_impl.h  dsvt_input_layer.cpp  dsvt_input_layer.h  dsvt_params.h
src/lidarObstacleDetect/lib/lidarnetsdk/src/lidar_net/flatformer/: flatformer_detector_impl.cpp  flatformer_detector_impl.h  flatformer_params.h  flattened_window_mapping.cpp  flattened_window_mapping.h
src/lidarObstacleDetect/lib/lidarnetsdk/src/utils/: CMakeLists.txt  config_convert.cpp  config_convert.h  nms_utils.cpp  nms_utils.h  pillargen.cpp  pillargen.h
src/lidarObstacleDetect/lib/lidarnetsdk/test/: CMakeLists.txt  test_lidar_net.cpp  user_log.h
src/lidarObstacleDetect/lib/lidarnetsdk/test/config/: dsvt_config.toml  dsvt_config_at128.toml  flatformer_config_at128.toml
src/lidarObstacleDetect/lib/lidarnetsdk/test/data/at128_test_data/: 1665708054634733000.pcd.npy  1665708197334686000.pcd.npy  1665708198334743000.pcd.npy  1665708199334641000.pcd.npy  1665708200334641000.pcd.npy
src/lidarObstacleDetect/lib/tracker/: CMakeLists.txt  tracker_manager.cpp  tracker_manager.h
src/lidarObstacleDetect/lib/tracker/associater/: associater.cpp  associater.h  secure_matrix.h  two_stage_associater.cpp  two_stage_associater.h
src/lidarObstacleDetect/lib/tracker/associater/distance_measurement/: general_distance_cal.cpp  general_distance_cal.h  object_distance_measurement.cpp  object_distance_measurement.h
src/lidarObstacleDetect/lib/tracker/associater/greedy/: greedy_matcher.cpp  greedy_matcher.h
src/lidarObstacleDetect/lib/tracker/associater/hungarian/: connected_component_analysis.cpp  connected_component_analysis.h  gated_hungarian_bigraph_matcher.h  hungarian_optimizer.h
src/lidarObstacleDetect/lib/tracker/associater/jpda/: jpda_associater.cpp  jpda_associater.h
src/lidarObstacleDetect/lib/tracker/associater/jpda/filter/: jpda.h
src/lidarObstacleDetect/lib/tracker/common/: Macros.h  base.h  base_track_filter.h  debug_singleton.h  depthink_time.h  detect_object.cpp  detect_object.h  lidar_perception_log.h  point_cloud.h  registerer.h  tracked_object.cpp  tracked_object.h  trunk_time.h
src/lidarObstacleDetect/lib/tracker/l_shape_tracker/: CMakeLists.txt  kalman.cpp  kalman.h  l_shape_filter.cpp  l_shape_filter.h  l_shape_track.cpp  l_shape_track.h  obj_tracked_3d.cpp  obj_tracked_3d.h
src/lidarObstacleDetect/lib/tracker/l_shape_tracker/association/: HungarianAlg.cpp  HungarianAlg.h
src/lidarObstacleDetect/lib/tracker/l_shape_tracker/meaurement/: distance_collection.hpp  rotated_iou.hpp
src/lidarObstacleDetect/lib/tracker/lib/interface/: base_target_track.h
src/lidarObstacleDetect/lib/tracker/lib/utils/: geometry.hpp
src/lidarObstacleDetect/lib/tracker/motion_filter/kalman_model/: extended_kalman_ca_model.hpp  extended_kalman_ca_model_without_velocity.hpp  extended_kalman_cv_model.hpp  extended_kalman_filter_impl.h  kalman_filter.h  normal_kalman_cv_model.hpp
src/lidarObstacleDetect/lib/tracker/motion_filter/l_shape/: lshape_motion_filter.cpp  lshape_motion_filter.h
src/lidarObstacleDetect/lib/tracker/motion_filter/multi_anchor/: measurement_collection.cc  measurement_collection.h  multi_anchor_motion_filter.cpp  multi_anchor_motion_filter.h  multi_anchor_motion_measurement.cpp  multi_anchor_motion_measurement.h
src/lidarObstacleDetect/lib/tracker/shape_filter/moving_average/: moving_average_filter.cpp  moving_average_filter.h
src/lidarObstacleDetect/lib/tracker/simple_track/: id_manager.h  simple_track.cpp  simple_track.h  tracklet.cpp  tracklet.h
src/lidarObstacleDetect/lib/visualization/: visualize_detected_objects.cpp  visualize_detected_objects.h
src/lidarObstacleDetect/src/: lidar_detection_track.cpp
(+86 files in other folders)
